# ClauseMatchAI

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
api/: main.py
data/test_contracts/: README.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/results/: page.tsx
frontend/src/types/: index.ts
specs/: mission.md  roadmap.md  tech-stack.md
specs/2026-05-16-fastapi-rest-endpoint/: plan.md  requirements.md  validation.md
specs/2026-05-16-file-hash-result-cache/: plan.md  requirements.md  validation.md
specs/2026-05-16-nextjs-frontend-ui/: plan.md  requirements.md  validation.md
src/: cache.py  document_parser.py
src/agents/: contextualization_agent.py  extraction_agent.py
tests/: test_api.py  test_cache.py  test_document_parser.py  test_pipeline.py
